spacing issue fix

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -1203,7 +1203,7 @@ body {
   }
   
   .css-kw13he-MuiDialogContent-root {
-    padding: 18px 18px;
+    padding: 16px;
   }
   
 .MuiDialog-container{ padding: 0 18px;}
